02. usefull-things-166-page-transition. UI.

--- a/about.html
+++ b/about.html
@@ -28,8 +28,18 @@
     </nav>
 
     <div class="container">
-        <div class="hero">
-            <h1>Kaelon</h1>
+        <div class="info">
+            <div class="col">
+                <img src="./assets/images/portrait.jpg" alt="">
+            </div>
+            <div class="col">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cupiditate 
+                    culpa unde dolorem doloremque, debitis et ab animi placeat architecto velit 
+                    deserunt id voluptatem vel nisi exercitationem reiciendis labore ratione! 
+                    Fuga deleniti beatae laboriosam veritatis ducimus itaque facilis quod ipsum.
+                </p>
+            </div>
         </div>
     </div>
 
