--- a/work.html
+++ b/work.html
@@ -28,8 +28,11 @@
     </nav>
 
     <div class="container">
-        <div class="hero">
-            <h1>Kaelon</h1>
+        <div class="images">
+            <img src="./assets/images/img1.jpg" alt="">
+            <img src="./assets/images/img2.jpg" alt="">
+            <img src="./assets/images/img3.jpg" alt="">
+            <img src="./assets/images/img4.jpg" alt="">
         </div>
     </div>
 
