03. usefull-things-166-page-transition. Page animation.

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <title>Project</title>
 </head>
 
-<body>
+<body class="about">
     <nav>
         <div class="logo">
             <div class="link">
@@ -30,7 +30,7 @@
     <div class="container">
         <div class="info">
             <div class="col">
-                <img src="./assets/images/portrait.jpg" alt="">
+                <img src="./assets/images/portrait.jpg" alt="Portrait of the designer">
             </div>
             <div class="col">
                 <p>
